# evan-brass.github.io

./: 404.html  CNAME  Cargo.toml  README.md  Rocket.toml  atom.xml  blog.sqlite  blog.sqlite.new  caddyfile  columns.css  config.toml  header-styles.css  index.html  robots.txt  site.sqlite3  site.sqlite3-shm  site.sqlite3-wal  sitemap.xml  temp.rs
.forestry/: settings.yml
about/: index.html
blog/: index.html
blog/built-in-and-custom-traits-in-javascript/: index.html
blog/distributed-web-applications/: index.html
blog/finite-state-machines-and-js/: index.html
blog/introduction-to-programming-1-background/: index.html
blog/introduction-to-programming-2-getting-started/: index.html
blog/introduction-to-programming-3-boolean-s-logic-and-conditionals/: index.html
blog/template-elements/: index.html
builder/: Cargo.toml  main.rs  post.rs
content/: about.md
content/blog/: _index.md  calendar.md  classed-highlighting-sample.md  distributed-web-applications.md  introduction-to-programming-1-background.md  introduction-to-programming-2-getting-started.md  introduction-to-programming-3-boolean-s-logic-and-conditionals.md  reactivity.md  testing.md  why-i-hated-amp-and-why-my-mind-has-changed.md
content/projects/: _index.md
editor/: main.mjs
log/: index.html
projects/: index.html
src/: context.rs  db.rs  header-styles.css  helpers.rs  justwrite.rs  main.rs  parser.rs  parser2.rs  parser3.rs  post.rs  schema.rs  template.rs
src/justwrite/: lexer.rs  mod.rs
src/packrat/: blex.rs  mod.rs  tests.rs
static/: BingSiteAuth.xml  header-styles.css  highlight-dark.css  highlight-light.css
static/css/: header-styles.css  main.css  print.css
tags/: index.html
tags/distributed-systems/: atom.xml  index.html
tags/finite-state-machines/: atom.xml  index.html
tags/frameworkless/: atom.xml  index.html
tags/javascript/: atom.xml  index.html
templates/: 404.html  blog_index.html.hbs  index.html  index.html.hbs  page.html  post_index.html  section.html  single.html  single.html.hbs  snippets.html
templating/: Cargo.toml  templating.rs
templating-macro/: Cargo.toml  template-macro.rs
testing/: protocol-handler.html
(+23 files in other folders)
