[package]
name = "builder"
version = "0.1.0"
description = "Static site generator for my blog."
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.26", features = [
	"blob",
	"chrono",
	"bundled",
	"functions",
	"serde_json",
	"column_decltype"
] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde", "std", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
voca_rs = "1.14"